apps/02-monitoring/fluent-bit-syslog/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fluent-bit-syslog
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: fluent-bit-syslog
  ports:
    - name: syslog-udp
      port: 514
      targetPort: 514
      protocol: UDP
    - name: syslog-tcp
      port: 514
      targetPort: 514
      protocol: TCP
    - name: metrics
      port: 2020
      targetPort: 2020
      protocol: TCP
