apps/02-monitoring/fluent-bit-syslog/base/ingressroute-syslog.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: fluent-bit-syslog-tcp
  namespace: monitoring
spec:
  entryPoints:
    - syslog-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: fluent-bit-syslog
          port: 514
