apps/02-monitoring/fluent-bit-syslog/base/cilium-networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: fluent-bit-syslog
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: fluent-bit-syslog
  ingress:
    # fromEndpoints: [{}] cassé dans Cilium 1.18.3 → fromEntities: cluster
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "514"
              protocol: TCP
            - port: "514"
              protocol: UDP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "2020"
              protocol: TCP
